--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@ngrx/store": "^12.5.0",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.6.1",
+    "ngx-bootstrap": "^7.1.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
